# rounded-window-corners

./: .editorconfig  .eslintrc.json  .gi.ts.rc.json  .gitignore  .prettierignore  .prettierrc.json  .ts-for-girrc.json  README.md  Vagrantfile  docs.json  extension.js  gulpfile.js  metadata.json  package.json  shell.nix  stylesheet.css  tsconfig.json  utils.js
.github/workflows/: pack.yml
@imports/: byteArray.d.ts
@imports/extensions/: extension.d.ts  prefs.d.ts  sharedInternals.d.ts
@imports/misc/: config.d.ts  extensionUtils.d.ts
@imports/ui/: backgroundMenu.d.ts  lookingGlass.d.ts  main.d.ts  windowManager.d.ts  windowPreview.d.ts  workspace.d.ts  workspaceAnimation.d.ts  workspacesView.d.ts
@ui/: windowPreview.d.ts  workspace.d.ts  workspaceAnimation.d.ts
conf/: init_vm.sh  zh_CN.Vagrantfile  zh_CN.init_vm.sh
gulp/: build.js  eslint.js  format.js  gi.js  pack.js  po.js  vagrant.js  watch.js
po/: ar.po  cs.po  de.po  eo.po  es.po  et.po  fi.po  fr.po  hu.po  id.po  it.po  ja.po  nb_NO.po  nl.po  pl.po  pt.po  pt_BR.po  rounded-window-corners@yilozt.pot  ru.po  tr.po  uk.po  zh_CN.po  zh_Hant.po
resource/: .eslintrc.json  metadata.json
resources/: .eslintrc.json  metadata.json  stylesheet-prefs.css  stylesheet.css
resources/patched-blur/: meson.build  patched-blur-effect.c  patched-blur-effect.h  shader.h
resources/schemas/: org.gnome.shell.extensions.rounded-window-corners.gschema.xml  org.gnome.shell.extensions.rounded-window-effect.gschema.xml
scripts/: gents.sh  giRename.js  replaceImports.js  skipcheck.sh  trans.js  transJsmap.sh
src/: .eslintrc.json  app.ts  blur-effect-manager.ts  blur-loader.ts  connections.ts  constants.ts  consts.ts  extension.ts  global.d.ts  mod.d.ts  prefs.ts  rounded-corners-manager.ts  roundedcorners.ts  settings.ts  utils.ts
src/compatibility/: compiz_alike_magic_lamp_effect.ts  compiz_windows_effect.ts  index.ts
src/dbus/: client.ts  iface.xml  services.ts
src/effect/: GrayEffect.ts  RoundedCornersEffect.ts  clip_shadow_effect.ts  gray_effect.ts  linear-filter-effect.ts  linear_filter_effect.ts  repaint-signal.ts  rounded-corners-effect.ts  rounded_corners_effect.ts
src/effect/shader/: clip_shadow.frag  rounded_corners.frag  rounded_corners.vert
src/loader/: blur-loader.ts
src/manager/: blur-effect-manager.ts  effect_manager.ts  rounded-corners-manager.ts  rounded_corners_manager.ts
src/preferences/: index.ts
src/preferences/pages/: blacklist.ts  blacklist.ui  blureffect.ts  blureffect.ui  custom.ts  (+3 more)
src/utils/: connections.ts  constants.ts  deps.ts  i18n.ts  io.ts  log.ts  pick-window.ts  prefs.ts  settings.ts  types.ts  ui.ts
(+13 files in other folders)
